--- a/src/gui/qjacktrip.ui
+++ b/src/gui/qjacktrip.ui
@@ -1123,7 +1123,59 @@ To connect to a hub server you need to run as a hub client.</string>
           </item>
          </widget>
         </item>
+        <item row="3" column="0">
+         <widget class="QLabel" name="inputDeviceLabel">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string>&amp;Input Device:</string>
+          </property>
+          <property name="buddy">
+           <cstring>inputDeviceComboBox</cstring>
+          </property>
+         </widget>
+        </item>
         <item row="3" column="1">
+         <widget class="QComboBox" name="inputDeviceComboBox">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="0">
+         <widget class="QLabel" name="outputDeviceLabel">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string>&amp;Output Device:</string>
+          </property>
+          <property name="buddy">
+           <cstring>outputDeviceComboBox</cstring>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="1">
+         <widget class="QComboBox" name="outputDeviceComboBox">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="1">
          <spacer name="backendSpacer">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -1135,6 +1187,30 @@ To connect to a hub server you need to run as a hub client.</string>
            </size>
           </property>
          </spacer>
+        </item>
+        <item row="8" column="0" colspan="2">
+          <layout class="QHBoxLayout" name="deviceManagementLayout">
+           <item>
+            <spacer name="useDefaultsSpacer">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item row="8" column="2">
+            <widget class="QPushButton" name="refreshDevicesButton">
+             <property name="text">
+              <string>&amp;Refresh Device List</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
         </item>
        </layout>
       </widget>
@@ -1695,6 +1771,9 @@ and wetness is the essence of beauty.</string>
   <tabstop>backendComboBox</tabstop>
   <tabstop>sampleRateComboBox</tabstop>
   <tabstop>bufferSizeComboBox</tabstop>
+  <tabstop>inputDeviceComboBox</tabstop>
+  <tabstop>outputDeviceComboBox</tabstop>
+  <tabstop>refreshDevicesButton</tabstop>
   <tabstop>jitterCheckBox</tabstop>
   <tabstop>bufferStrategyComboBox</tabstop>
   <tabstop>broadcastCheckBox</tabstop>
