--- a/herlpergui.ui
+++ b/herlpergui.ui
@@ -26,7 +26,10 @@
     <number>1</number>
    </property>
    <property name="maximum">
-    <number>1000</number>
+    <number>60</number>
+   </property>
+   <property name="value">
+    <number>60</number>
    </property>
    <property name="orientation">
     <enum>Qt::Horizontal</enum>
